--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -886,8 +886,6 @@ $carousel-control-color:                      #fff !default;
 $carousel-control-width:                      15% !default;
 $carousel-control-opacity:                    .5 !default;
 
-$carousel-indicators-width:                   60% !default;
-
 $carousel-indicator-width:                    30px !default;
 $carousel-indicator-height:                   3px !default;
 $carousel-indicator-active-bg:                #fff !default;
